@@ -38,16 +38,16 @@ beb55085de49d23665272a0db65d1dff *man/summary.lm.rrpp.Rd
 e89f1ebd5e75e4a3ac32e99661476117 *man/summary.pairwise.Rd
 73f2a913f66ac6af76747a7cd93c9070 *man/summary.predict.lm.rrpp.Rd
 ba5f3e0610f91baec3b02a3b83dfe4ca *NAMESPACE
-9772b048ebfbc727d5c3bd26163d194f *NEWS
+f08e5f9d093296f7b42bcd42c87182ba *NEWS
 262059f161b3a6bef292cdd97fc9c414 *R/anova.lm.rrpp.r
 c2cda15833b34d15cbc97c9cd4530666 *R/classify.r
 52536f21f7ea4cdcfa3ebfe15b4ffbac *R/coef.lm.rrpp.r
 7014220fb7494af45ad0fbff318383eb *R/lm.rrpp.r
 d0c2e9bfde3601544d96c22161e1e4ae *R/model.comparison.r
-c48d57ff6b7e0f909c1ab29c49197317 *R/pairwise.r
-4e1f9e99e9a534d6b69598e48c67e9ab *R/predict.lm.rrpp.r
+aadeaa80e40a91ea7d57d7fda254141a *R/pairwise.r
+2842c35d4b0d9cac9efff813dbf2115d *R/predict.lm.rrpp.r
 9772bee7bfda5da643fffacd36a70920 *R/RRPP.support.code.r
-f207a6fe32f283476c2f6a4ccfe99e5c *R/RRPP.utils.r
+6768d2023e61d5a0a153485d07fa15fc *R/RRPP.utils.r
 987d403df491c09b6db91776c4443a53 *README.md
 7db72b7e01004751c5cf9d9eb2c9122c *RRPP.Rproj
 597d993e67557b7e47629ea98a6e2b14 *vignettes/Collyer.Adams.2018.MEE.Appendix.S2.Rmd
